kubernetes/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snappass-http
  namespace: snappass
spec:
  ports:
  - name: snappass-http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app.k8s.com/name: snappass
    app.k8s.com/instance: snappass
  sessionAffinity: None
  type: ClusterIP
